<resources>
    <string name="app_name">Text Recognizer</string>
    <string name="create_an_account">create an account</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_new_board">Add New Board</string>
    <string name="board_name">Board Name..</string>
    <string name="add">Add</string>
    <string name="save">Save Note</string>
    <string name="delete">Delete</string>
    <string name="word_file">Word file</string>
    <string name="file_name">File Name…</string>
    <string name="save_file">Save File</string>
    <string name="full_name">Full Name</string>
    <string name="save_new_file">Save New File</string>
    <string name="txt_file">Txt File</string>
    <string name="pick_image_intent_chooser_title">pick image</string>
</resources>