<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/add_new_board"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22sp"
        app:boxStrokeColor="@color/orange"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="2dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        android:hint="@string/board_name"
        app:counterEnabled="true"
        app:counterMaxLength="22"
        app:hintAnimationEnabled="true"
        app:placeholderTextColor="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/txt1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtBoardName"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:maxLength="22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edtTextLayout"
        android:layout_marginTop="24sp"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintTop_toBottomOf="@id/edtTextLayout"
        android:layout_marginTop="24sp"
        android:backgroundTint="@color/orange"
        android:text="@string/add"/>

</androidx.constraintlayout.widget.ConstraintLayout>